--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Snake</title>
     <script src="snake.js"></script>
     <script src="game.js" defer></script>
+    <script src="input.js"></script>
+    <script src="food.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <div id="game-board"></div>
